# XSCALAMPI

./: .cproject  .project  Makefile  Makefile.in  __.gitignore (copy)  aclocal.m4  archiveDirections.sh  config.lt  config.status  gitupdate.sh  libtool
XSCALAMPI/ompi/mpiext/XCLFrame/c/: Makefile.am  XclScatter.c  XclScatter.h  hiddenComms.h  mpiext_XCLFrame_early.c  taskMap.h
ompi/mpiext/XCLFrame/: Makefile  Makefile.am  Makefile.in  configure.m4  configure.m4~
ompi/mpiext/XCLFrame/DataManager/: Makefile  Makefile.am  Makefile.in  libdataManager.la
ompi/mpiext/XCLFrame/DataManager/.libs/: libdataManager.la  libdataManager.lai
ompi/mpiext/XCLFrame/DataManager/Base/: bufferFree.c  dLinkListMgmt.c  dLinkListMgmt.h  dLinkListMgmt.lo  dMutexMgmt.c  dMutexMgmt.h  dMutexMgmt.lo  dataManager.c  dataManager.h  dataManager.lo  entityInfo.h  modUpdate.sh
ompi/mpiext/XCLFrame/DataManager/Base/.deps/: bufferFree.Plo  bufferInit.Plo  bufferRead.Plo  bufferWrite.Plo  containersList.Plo  dLinkListMgmt.Plo  dMutexMgmt.Plo  dataManager.Plo  errorHandling.Plo
ompi/mpiext/XCLFrame/DataManager/BufferMgmt/: Makefile  Makefile.am  Makefile.in  bufferFree.lo  bufferFunctions.h  bufferInit.c  bufferInit.lo  bufferRead.c  bufferRead.lo  bufferWrite.lo  libbufferMgmt.la
ompi/mpiext/XCLFrame/DataManager/BufferMgmt/.deps/: bufferFree.Plo  (+3 more)
ompi/mpiext/XCLFrame/DataManager/CollectiveOps/: Makefile  Makefile.am  Makefile.in  XclGather.c  XclGather.lo  XclScatter.c  XclScatter.h  collectiveOps.h  libcollectiveOps.la  singleSidedComms.lo
ompi/mpiext/XCLFrame/DataManager/DataCopy/: Makefile  Makefile.am  Makefile.in  bufferRead.c  bufferWrite.c  componentUpdate  dataCopy.h  intraDevBufferCpy.c  intraDevBufferCpy.lo  libdataCopy.la
ompi/mpiext/XCLFrame/DataManager/TwoSidedComms/: XclScatter.c  XclScatter.h  XclScatter.lo  dataMgmt_I.h  singleSidedComms.c  singleSidedComms.h
ompi/mpiext/XCLFrame/PoolManager/: Makefile  Makefile.am  Makefile.in  libpoolManager.la
ompi/mpiext/XCLFrame/PoolManager/.libs/: libpoolManager.la  libpoolManager.lai
ompi/mpiext/XCLFrame/PoolManager/Base/: poolManager.c  poolManager.h  poolManager.lo  queues.c  queues.lo
ompi/mpiext/XCLFrame/Scheduling/: Makefile  Makefile.am  Makefile.in  commsInfo.c  commsInfo.h  libscheduling.la  updateLib.sh
ompi/mpiext/XCLFrame/Scheduling/.deps/: scheduling.Plo  taskSetup.Plo
ompi/mpiext/XCLFrame/Scheduling/.libs/: libcommsInfo.lai  libcommsInfo.so.0.0.0  libscheduling.la  libscheduling.lai
ompi/mpiext/XCLFrame/Scheduling/Base/: appDataCollect.c  appDataCollect.lo  schedWrapper.h  scheduling.c  scheduling.h  scheduling.lo  sysDataCollect.c  sysDataCollect.lo  taskSetup.c  taskSetup.lo
ompi/mpiext/XCLFrame/Scheduling/Benchmark/: Makefile  Makefile.am  Makefile.in  accelerationTest.c  accelerationTest.lo  commsBench.c  commsBench.h  compBench.lo  libbenchmark.la  updateLib.sh
ompi/mpiext/XCLFrame/Scheduling/DynamicSched/: IFactory.hpp  IScheduler.hpp  Makefile  Makefile.am  Makefile.in  asbtractFactoryWrapper.cpp  asbtractFactoryWrapper.lo  dynamicSched.h  libdynamicSched.la
ompi/mpiext/XCLFrame/Scheduling/ManualSched/: Makefile  Makefile.am  Makefile.in  libmanualSched.la  manualSched.h  schedFileParser.c  schedFileParser.lo
ompi/mpiext/XCLFrame/Scheduling/StaticSched/: ISH.cpp  ISH.h  ISH.lo  ISH_test.cpp  IScheduler.hpp  Makefile  Makefile.am  Makefile.in  libstaticSched.la  wrapperFactory.cpp  wrapperFactory.h  wrapperFactory.lo
ompi/mpiext/XCLFrame/TaskManager/: Makefile  Makefile.am  Makefile.in  libtaskManager.la  updateLib.sh
ompi/mpiext/XCLFrame/TaskManager/.libs/: libtaskManager.la  libtaskManager.lai
ompi/mpiext/XCLFrame/TaskManager/Base/: task.h  taskManager.c  taskManager.h  taskManager.lo
ompi/mpiext/XCLFrame/TaskManager/KernelMgmt/: Makefile  Makefile.am  Makefile.in  argsParsing.c  argsParsing.lo  kernelSetup.c  kernelSetup.h  kernelSetup.lo  libkernelMgmt.la  taskProcedures.c  taskProcedures.h  taskProcedures.lo  updateLib.sh
ompi/mpiext/XCLFrame/TaskManager/SynchMgmt/: Makefile  Makefile.am  Makefile.in  libsynchMgmt.la  synchMgmt.c  synchMgmt.h  synchMgmt.lo
ompi/mpiext/XCLFrame/c/: Makefile  Makefile.am  Makefile.in  XclScatter.lo  argsParser.c  argsParser.lo  c_Interface.c  c_Interface.h  c_Interface.lo  getStoragePath.c  getStoragePath.lo  hiddenComms.c  hiddenComms.lo  interfaceUpdate.sh  interfaceUpdate.sh~  libmpiext_XCLFrame_c.la  mpiext_XCLFrame_c.h  mpiext_XCLFrame_early.c  mpiext_XCLFrame_early.lo  mpiext_XCLFrame_late.c  mpiext_XCLFrame_late.lo  queueMutexes.h  taskMap.h  updateLib.sh
ompi/mpiext/XCLFrame/c/.deps/: XclScatter.Plo  argsParser.Plo  c_Interface.Plo  getStoragePath.Plo  hiddenComms.Plo  mpiext_XCLFrame_early.Plo  mpiext_XCLFrame_late.Plo
ompi/mpiext/XCLFrame/c/.libs/: libmpiext_XCLFrame_c.la
ompi/mpiext/XCLFrame/c/CallsBag/: callsBag.c  callsBag.h  callsBag.lo
ompi/mpiext/XCLFrame/c/ErrorHandling/: errorHandling.c  errorHandling.lo
ompi/mpiext/XCLFrame/c/singleSidedComms/: XclScatter.lo  entityInfo.h  singleSidedComms.c  singleSidedComms.lo
ompi/mpiext/XCLFrame/multiDeviceMgmt/: Makefile  Makefile.am  Makefile.in  libmultiDeviceMgmt.la  updateLib.sh
ompi/mpiext/XCLFrame/multiDeviceMgmt/.libs/: libmultiDeviceMgmt.la  libmultiDeviceMgmt.so.0  libmultiDeviceMgmt.so.0.0.0
ompi/mpiext/XCLFrame/multiDeviceMgmt/Base/: deviceMgmt.c  deviceMgmt.h  deviceMgmt.lo
ompi/mpiext/XCLFrame/multiDeviceMgmt/deviceMgmt/: Device.h  deviceExploration.h  deviceExploration.lo  devicesInitialization.c  devicesInitialization.lo  libmultiDeviceMgmt_la-deviceExploration.lo  libmultiDeviceMgmt_la-devicesInitialization.lo  localDevices.h
ompi/mpiext/XCLFrame/multiDeviceMgmt/errorMgmt/: errorHandling.lo
ompi/mpiext/XCLFrame/multiDeviceMgmt/kernelMgmt/: taskProcedures.c
ompi/mpiext/XCLFrame/multiDeviceMgmt/taskMgmt/: task.h  taskProcedures.c  taskProcedures.h  taskProcedures.lo
ompi/mpiext/XCLFrame/scheduling/: Makefile  commsInfo.lo
ompi/mpiext/XCLFrame/scheduling/.deps/: commsInfo.Plo
ompi/mpiext/XCLFrame/scheduling/.libs/: libcommsInfo.so.0  libcommsInfo.so.0.0.0
(+4748 files in other folders)
