#######################################
# The list of libraries we are building seperated by spaces.
# The 'lib_' indicates that these build products will be installed
# in the $(libdir) directory. For example /usr/lib

commsInfodir=$(libdir)/XCLFrame/commsInfo

commsInfo_LTLIBRARIES = libcommsInfo.la


#######################################
# Build information for each library

# Sources for libcommsInfo
libcommsInfo_la_SOURCES =commsInfo.c
					  
#libcommsInfo_la_LDFLAGS = -ldl	-lOpenCL -Wl,-rpath -Wl$(libdir)/XCLFrame/multiDeviceMgmt			  
					  