
taskManagerdir=$(libdir)/XCLFrame/TaskManager
taskManager_LTLIBRARIES = libtaskManager.la


#######################################
# Build information for each library

# Sources for libtaskManager
libtaskManager_la_SOURCES = ./Base/taskManager.c 
		
		
#######################################		
# Linker options  for each library
libtaskManager_la_LDFLAGS =-avoid-version -lOpenCL -lm -ldl 