
manualScheddir=$(libdir)/XCLFrame/Scheduling/ManualSched

manualSched_LTLIBRARIES = libmanualSched.la

#######################################
# Build information for this library

# Sources for libmanualSched
libmanualSched_la_SOURCES = schedFileParser.c 						  

# Linker options libTestProgram
libmanualSched_la_LDFLAGS =-module -avoid-version -lOpenCL