
synchMgmtdir=$(libdir)/XCLFrame/TaskManager/SynchMgmt

synchMgmt_LTLIBRARIES = libsynchMgmt.la

#######################################
# Build information for this library

# Sources for libmultiDeviceMgmt
libsynchMgmt_la_SOURCES = synchMgmt.c 

# Linker options lib
libsynchMgmt_la_LDFLAGS =-module -avoid-version -lOpenCL